# RosServices

./: README.md
Service_as_variable_update/devel/: .catkin  .rosinstall  setup.sh
Service_as_variable_update/devel/include/base_joy_controller_pkg/: adcmResponse.h  modesResponse.h
Service_as_variable_update/devel/lib/base_joy_controller_pkg/: atm_randi_attempt  main.cpp  modeservice.py  service.py
Service_as_variable_update/devel/lib/pkgconfig/: base_joy_controller_pkg.pc
Service_as_variable_update/devel/lib/python3/dist-packages/base_joy_controller_pkg/srv/: __init__.py
Service_as_variable_update/devel/share/base_joy_controller_pkg/cmake/: base_joy_controller_pkg-msg-extras.cmake  base_joy_controller_pkg-msg-paths.cmake  base_joy_controller_pkgConfig.cmake
Service_as_variable_update/devel/share/common-lisp/ros/base_joy_controller_pkg/srv/: base_joy_controller_pkg-srv.asd
Service_as_variable_update/devel/share/gennodejs/ros/base_joy_controller_pkg/srv/: _index.js  modes.js
Service_as_variable_update/devel/share/roseus/ros/base_joy_controller_pkg/: manifest.l
Service_as_variable_update/src/base_joy_controller_pkg/: CMakeLists.txt  service.launch
Service_as_variable_update/src/base_joy_controller_pkg/src/: modeservice.py  pymav_translate_script.py
Service_as_variable_update/src/base_joy_controller_pkg/srv/: modes.srv
Services_as_function/devel/: .catkin  .rosinstall  local_setup.sh
Services_as_function/devel/include/base_joy_controller_pkg/: modes.h  modesRequest.h
Services_as_function/devel/lib/base_joy_controller_pkg/: armdisarmservice.py  atm_randi_attempt  modeservice.py  pymav_translate_script.py
Services_as_function/devel/lib/pkgconfig/: base_joy_controller_pkg.pc
Services_as_function/devel/lib/python3/dist-packages/base_joy_controller_pkg/srv/: _adcm.py  _modes.py
Services_as_function/devel/share/base_joy_controller_pkg/cmake/: base_joy_controller_pkg-msg-paths.cmake  base_joy_controller_pkgConfig.cmake
Services_as_function/devel/share/common-lisp/ros/base_joy_controller_pkg/srv/: _package.lisp  _package_modes.lisp  adcm.lisp  modes.lisp
Services_as_function/devel/share/gennodejs/ros/base_joy_controller_pkg/srv/: adcm.js
Services_as_function/devel/share/roseus/ros/base_joy_controller_pkg/: manifest.l
Services_as_function/devel/share/roseus/ros/base_joy_controller_pkg/srv/: adcm.l  modes.l
Services_as_function/src/base_joy_controller_pkg/: CMakeLists.txt
Services_as_function/src/base_joy_controller_pkg/include/base_joy_controller_pkg/: base_joy_subs.hpp
Services_as_function/src/base_joy_controller_pkg/src/: armdisarmservice.py  modeservice.py
custom_srvs/src/srvauv/: CMakeLists.txt  package.xml
custom_srvs/src/srvauv/src/: armdisarmservice.py  modeservice.py
custom_srvs/src/srvauv/srv/: adcm.srv
